--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "grunt",
     "test": "grunt test"
   },
+  "main": "build/js/wp-api.js",
   "devDependencies": {
     "bower": "~1.3.3",
     "grunt": "~0.4.2",
