--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wp-api",
   "version": "0.1.0",
   "scripts": {
-    "postinstall": "bower install && grunt",
+    "postinstall": "$(npm bin)/bower install && $(npm bin)/grunt",
     "build": "grunt",
     "test": "grunt test"
   },
