--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "test": "grunt test"
   },
   "main": "build/js/wp-api.js",
+  "dependencies": {
+    "jquery": "~2.1.1",
+    "backbone": "~1.1.2",
+    "underscore": "~1.6.0"
+  },
   "devDependencies": {
     "bower": "~1.3.3",
     "grunt": "~0.4.2",
