--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   },
   "main": "build/js/wp-api.js",
   "dependencies": {
-    "jquery": "~2.1.1",
-    "backbone": "~1.1.2",
-    "underscore": "~1.6.0"
+    "backbone": "~1.2.3",
+    "jquery": "^2.1.4",
+    "underscore": "~1.8.3"
   },
   "devDependencies": {
     "bower": "~1.3.3",
