--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "grunt test"
   },
   "main": "build/js/wp-api.js",
-  "typings": "./build/declare/index.d.ts",
+  "typings": "./ts/declare/index.d.ts",
   "dependencies": {
     "backbone": "~1.2.3",
     "jquery": "^2.1.4",
